add plot_oz file

--- a/tests/plots_oz.ipynb
+++ b/tests/plots_oz.ipynb
@@ -711,6 +711,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'clk_resonators' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mclk_resonators\u001B[49m)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'clk_resonators' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(clk_resonators)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-01T14:18:38.628965100Z",
+     "start_time": "2023-06-01T14:18:38.108614900Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 207,
    "outputs": [
     {
